--- a/realtor-email/email.html
+++ b/realtor-email/email.html
@@ -63,22 +63,6 @@
         width: 80%;
         margin: 0 auto;
     }
-/* 
-    .cta-content .cta-btn a{
-        text-decoration: none;
-        color: #171A1B;
-    }
-    .cta-content .cta-btn {
-        padding: 32px 0;
-    }
-    .cta-content .cta-btn .btn {
-        border: #171A1B 1px solid;
-        padding: 12px 32px;
-        border-radius: 4px;
-        margin: 20px;
-        font-size: 12px;
-        text-transform: uppercase;
-    } */
 
     .cta.padding{
         text-align: center;
@@ -268,7 +252,6 @@
             </tr>
             <!-- End Navbar Table -->
 
-
             <!-- Hero Table -->
             <tr>
                 <td>
@@ -276,7 +259,6 @@
                 </td>
             </tr>
             <!-- End Hero Table -->
-
 
             <!-- Start CTA Table -->
             <tr>
@@ -300,17 +282,17 @@
                         </tr> -->
                     </table>
 
-                    <table width="100%" class="containers">
+                    <table width="100%" class="container">
                         <tr>
                             <td class="padding cta-btn-container" style="font-size: 16px;" align="center">
-                                <table class="cta-content-btn">
+                                <table class="cta-content-btn" style="text-align: center;padding: 20px 0 20px 75px;" align="center">
                                     <tr>
                                         <td class="cta-btn">
                                             <a href="#" style="font-size: 14px;">Shop Mens</a>
                                         </td>
                                     </tr>
                                 </table>
-                                <table class="cta-content-btn">
+                                <table class="cta-content-btn" style="text-align: center;padding: 20px 0 20px 75px;" align="center">
                                     <tr>
                                         <td class="cta-btn">
                                             <a href="#" style="font-size: 14px;">Shop Womens</a>
@@ -323,7 +305,6 @@
                 </td>
             </tr>
             <!-- End CTA Table -->
-
 
             <!-- Start Product two Column Table  -->
             <tr>
